@@ -6,6 +6,8 @@ Xfce 4.6.1
     quits (bug 5154).
   * Reload the backdrop and icon view when 'xfdesktop --reload'
     is run (bug 5156).
+  * Make default button in 'delete multiple' dialog consistent with
+    default in 'delete single' dialog (bug 5140).
 
 
 Xfce 4.6.0
